About info overflow fix index

--- a/includes/css/index.css
+++ b/includes/css/index.css
@@ -4,7 +4,7 @@
 .index-content {
   display: flex;
   flex-direction: column;
-  align-items: center;
+  /* align-items: center; */
   justify-content: center;
   /* https://medium.com/cloud-native-the-gathering/how-to-use-css-to-fade-in-and-fade-out-html-text-and-pictures-f45c11364f08 */
   animation: fadeIn ease 1.5s;
@@ -14,131 +14,44 @@
   -ms-animation: fadeIn ease 1.5s;
 }
 
-.splash-button {
-  background-color: #202A5D;
-  opacity: 100%;
-  border-radius: 4px;
-  color: white;
-  padding: 15px 28px;
-  text-align: center;
-  text-decoration: none;
-  display: inline-block;
-  font-size: 18px;
-  /* margin: 2px 2px; */
-  cursor: pointer;
-}
-
-.intro {
-  display: flex;
-  align-items: center;
-  flex-direction: column;
-  justify-content: center;
-  position: fixed;
-  z-index: 1;
-  left: 0;
-  top: 0;
-  width: 100%;
-  height: 100vh;
-  background-color: white;
-  transition: 1s;
-  font-family: 'Source Sans Pro', sans-serif;
-  -webkit-appearance: none;
-  -moz-appearance: none;
-  appearance: none;
-}
-
-/* .main {
-  display: none;
-} */
-
-.logo-header {
-  position: absolute;
-  top: 40%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  font-family: 'Source Sans Pro', sans-serif;
-  color: #202A5D;
-  -webkit-appearance: none;
-  -moz-appearance: none;
-  appearance: none;
-}
-
-.logo {
-  position: relative;
-  display: inline-block;
-  bottom: -20px;
-  opacity: 0;
-  -webkit-appearance: none;
-  -moz-appearance: none;
-  appearance: none;
-}
-
-.logo.active {
-  bottom: 0;
-  opacity: 1;
-  transition: ease-in-out 0.5s;
-  -webkit-appearance: none;
-  -moz-appearance: none;
-  appearance: none;
-}
-
-.logo.fade {
-  bottom: 150px;
-  opacity: 0;
-  transition: ease-in-out 0.5s;
-  -webkit-appearance: none;
-  -moz-appearance: none;
-  appearance: none;
-}
-
 [class^="index-slide"] {
   display: flex !important;
   flex-direction: row;
-  justify-content: center;
-  align-items: center;
+  justify-content: center; 
   width: 100vw;
   height: 85vh;
+}
+
+.index-slide-one-left, .index-slide-two-left {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   color: white;
+  background-color: #202A5D;
+  padding: 84px;
+  font-size: 32px;
+  overflow: scroll;
   font-family: 'Amiko', sans-serif;
 }
 
-.index-slide-two {
-  background-color: #202A5D;
+.index-slide-one-right, .index-slide-two-right {
+  color: white;
+  padding: 48px;
+  background-color: #B93838;
+  font-family: 'Source Sans Pro', sans-serif;
+  line-height: 2;
+  font-size: 24px;
+  overflow-y: scroll;
+  padding-top: 12vh;
+  padding-bottom: 12vh;
 }
 
 .index-slide-three {
   background-color: #B93838;
-}
-
-.index-slide-one-left {
+  font-family: 'Amiko', sans-serif;
   display: flex;
   justify-content: center;
   align-items: center;
-  color: white;
-  width: 50vw;
-  height: 85vh;
-  background-color: #202A5D;
-  padding: 84px;
-  font-size: 1.5vw;
-  overflow: scroll;
-}
-
-.index-slide-one-right {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  color: white;
-  padding: 48px;
-  width: 50vw;
-  height: 85vh;
-  background-color: #B93838;
-  font-family: 'Source Sans Pro', sans-serif;
-  line-height: 2;
-  font-size: 1.5vw;
-  /* height: 50vh; */
-  overflow-y: scroll;
-
 }
   
 @keyframes fadeIn {
